Fixes the empty text alignment

--- a/app/assets/stylesheets/modules/_tables.scss
+++ b/app/assets/stylesheets/modules/_tables.scss
@@ -25,7 +25,7 @@
     border-radius: 6px;
     -moz-border-radius: 6px;
 
-    h1 {
+    h2 {
       color: $secondary-color;
       margin: 0;
       text-align: center;
